# giro-de-peppe-tempo

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
cpp/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
go/: Dockerfile  go.mod  go.sum  main.go
service-a/: .gitlab-ci.yml  README.md  build.gradle
service-a/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
service-a/src/main/java/com/sigeosrl/servicea/queue/: RabbitMQConsumer.java
service-a/src/main/java/com/sigeosrl/servicea/resource/: ChangeLogResource.java  TestResource.java
service-a/src/main/resources/: application.properties
service-a/src/test/java/com/sigeosrl/servicea/resouce/: TestResourceTest.java
service-b/: Dockerfile  README.md  build.gradle
service-b/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
service-b/src/main/java/com/sigeosrl/serviceb/queue/: RabbitMQProducer.java
service-b/src/main/java/com/sigeosrl/serviceb/resource/: ChangeLogResource.java  TestResource.java
service-b/src/main/resources/: application.properties
service-b/src/test/java/com/sigeosrl/serviceb/config/: WireMockExtensions.java
service-b/src/test/java/com/sigeosrl/serviceb/resource/: TestResourceTest.java
